--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project Card 1: Arcade High Score Tracking App -->
                 <div class="bg-dark-black rounded-xl shadow-xl overflow-hidden border-2 border-dark-grey project-card cursor-pointer" onclick="openModal('project1')">
-                    <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/scorecade.png" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-retro-red">
+                    <img src="https://github.com/Aram814/Assets/blob/main/scorecade.png?raw=true" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-retro-red">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-pure-white mb-2">Arcade High Score Tracking App</h3>
                         <p class="text-light-grey text-sm mb-4">UX Research, Credibility, Real-time Verification</p>
@@ -430,7 +430,7 @@
 
                 <!-- Project Card 3: Death Doula Webpage -->
                 <div class="bg-dark-black rounded-xl shadow-xl overflow-hidden border-2 border-dark-grey project-card cursor-pointer" onclick="openModal('project3')">
-                    <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/Snedmeonmyway.png" alt="Death Doula Webpage" class="w-full h-48 object-cover border-b-2 border-retro-yellow">
+                    <img src="https://github.com/Aram814/Assets/blob/main/Snedmeonmyway.png?raw=true" alt="Death Doula Webpage" class="w-full h-48 object-cover border-b-2 border-retro-yellow">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-pure-white mb-2">Death Doula Webpage</h3>
                         <p class="text-light-grey text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
@@ -477,7 +477,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project1')">&times;</span>
             <h3 class="text-3xl font-bold text-retro-yellow mb-4">Arcade High Score Tracking App</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/scorecade.png" alt="Arcade High Score Tracking App Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-retro-red">
+            <img src="https://github.com/Aram814/Assets/blob/main/scorecade.png?raw=true" alt="Arcade High Score Tracking App Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-retro-red">
             <p class="text-light-grey mb-4">
                 This project was instrumental in deepening my understanding of creating dynamic, user-friendly applications, and the challenges involved in ensuring a seamless and engaging user journey within a complex system.
             </p>
@@ -519,7 +519,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project3')">&times;</span>
             <h3 class="text-3xl font-bold text-retro-yellow mb-4">Death Doula Webpage</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/Snedmeonmyway.png" alt="Death Doula Webpage Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-retro-yellow">
+            <img src="https://github.com/Aram814/Assets/blob/main/Snedmeonmyway.png?raw=true" alt="Death Doula Webpage Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-retro-yellow">
             <p class="text-light-grey mb-4">
                 This project involved the full construct and design of a personal/private business website for local Death Doula services. Requirements were for both desktop and mobile compatibility, ability to book consulting, read testimonies, view services, and add a feature "blog."
             </p>
