--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
                     <li><a href="#about" class="text-light-grey hover:text-retro-blue transition duration-300 text-lg">About</a></li>
                     <li><a href="#projects" class="text-light-grey hover:text-retro-blue transition duration-300 text-lg">Projects</a></li>
                     <li><a href="#contact" class="text-light-grey hover:text-retro-blue transition duration-300 text-lg">Contact</a></li>
+                    <li><a href="https://docs.google.com/document/d/1B7j-gC1w1k_q9x8p8y6f5z5t6v7y8z9x0/export?format=pdf" target="_blank" download="Amanda Ramirez Resume.pdf" class="text-light-grey hover:text-retro-yellow transition duration-300 text-lg">Resume</a></li>
                 </ul>
             </nav>
         </div>
