--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
             <p class="text-light-grey">
                 <strong>Key Outcomes:</strong> This project was instrumental in deepening my understanding of creating dynamic, user-friendly applications, and the challenges involved in ensuring a seamless and engaging user journey within a complex system.
             </p>
-            <a href="#" class="inline-block mt-6 bg-retro-blue text-dark-black font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-retro-blue hover:border-retro-yellow">
-                View Full Case Study (Coming Soon)
+            <a href="CaseStudy1.html" class="inline-block mt-6 bg-retro-blue text-dark-black font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-retro-blue hover:border-retro-yellow">
+                View Full Case Study
             </a>
         </div>
     </div>
