--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -1,267 +1,184 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pixelated Scorecade – Case Study</title>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <title>QueerSafeSpace Case Study – Amanda Ramirez</title>
   <style>
     :root {
-      --bg-color: #0d0d0d;
-      --text-color: #a6e22e;
-      --link-color: #66d9ef;
-      --border-color: #66d9ef;
-      --focus-outline: 3px dashed #ffd866;
+      --background: #f7f8fa;
+      --primary: #6a1b9a;
+      --accent: #ff4081;
+      --text-dark: #1c1c1c;
+      --text-light: #ffffff;
     }
 
-    [data-theme="light"] {
-      --bg-color: #f9f9f9;
-      --text-color: #222222;
-      --link-color: #007acc;
-      --border-color: #007acc;
-      --focus-outline: 3px dashed #cc33cc;
+    [data-theme="dark"] {
+      --background: #121212;
+      --text-dark: #f0f0f0;
+      --primary: #bb86fc;
+      --accent: #ff79b0;
     }
 
     body {
       margin: 0;
-      padding: 2rem;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      font-family: 'VT323', monospace;
-      font-size: 1.25rem;
-      line-height: 1.75;
-      transition: background-color 0.3s, color 0.3s;
+      font-family: "Helvetica Neue", sans-serif;
+      background: var(--background);
+      color: var(--text-dark);
+      line-height: 1.6;
+      transition: background 0.3s, color 0.3s;
     }
 
-    a {
-      color: var(--link-color);
-      text-decoration: underline;
-    }
-
-    a:focus, button:focus, input:focus {
-      outline: var(--focus-outline);
-      outline-offset: 4px;
-    }
-
-    h1, h2, h3 {
-      border-bottom: 1px dashed var(--border-color);
-      padding-bottom: 0.3rem;
-      margin-top: 2rem;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    .button-link {
-      display: inline-block;
-      border: 1px solid var(--border-color);
-      padding: 0.5rem 1rem;
-      margin-top: 1rem;
-      background-color: transparent;
-      color: var(--link-color);
-      text-decoration: none;
-      transition: background-color 0.3s;
-    }
-
-    .button-link:hover,
-    .button-link:focus {
-      background-color: rgba(102, 217, 239, 0.15);
-    }
-
-    figure {
-      display: block;
-      margin: 1.5rem auto;
-      max-width: 500px;
-      width: 100%;
+    header {
+      background: linear-gradient(45deg, var(--primary), var(--accent));
+      color: var(--text-light);
+      padding: 2rem 1rem;
       text-align: center;
     }
 
-    figure img {
-      width: 100%;
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1.5rem;
+    }
+
+    img {
+      display: block;
+      max-width: 100%;
       height: auto;
-      border: 2px solid var(--border-color);
+      margin: 2rem auto;
+      border: 2px solid var(--primary);
+      border-radius: 12px;
     }
 
     figcaption {
-      font-size: 1rem;
-      color: #cccccc;
-      margin-top: 0.5rem;
+      text-align: center;
+      font-style: italic;
+      font-size: 0.9rem;
+      margin-top: -1rem;
+      color: #555;
     }
 
-    ul {
-      padding-left: 1.5rem;
-    }
-
-    hr {
-      border-color: var(--border-color);
-    }
-
-    .theme-toggle-container {
-      float: right;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      margin-top: 0.5rem;
-    }
-
-    .switch {
-      position: relative;
+    a.button {
       display: inline-block;
-      width: 48px;
-      height: 24px;
+      margin-top: 2rem;
+      padding: 0.75rem 1.5rem;
+      background: var(--accent);
+      color: var(--text-light);
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      text-align: center;
     }
 
-    .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
+    .toggle-theme {
+      margin: 1rem auto;
+      display: flex;
+      justify-content: center;
     }
 
-    .slider {
-      position: absolute;
+    button {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 5px;
+      background: var(--primary);
+      color: var(--text-light);
       cursor: pointer;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: #ccc;
-      transition: 0.4s;
-      border-radius: 24px;
+      font-weight: bold;
     }
 
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 18px;
-      width: 18px;
-      left: 3px;
-      bottom: 3px;
-      background-color: white;
-      transition: 0.4s;
-      border-radius: 50%;
-    }
-
-    input:checked + .slider {
-      background-color: #2196F3;
-    }
-
-    input:checked + .slider:before {
-      transform: translateX(24px);
-    }
-
-    @media (max-width: 600px) {
-      .theme-toggle-container {
-        float: none;
-        justify-content: flex-start;
-        margin-bottom: 1rem;
-      }
+    footer {
+      margin: 3rem 0 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <header role="banner">
-    <div class="container">
-      <nav role="navigation" aria-label="Main navigation">
-        <a href="https://aram814.github.io/Portfolio/index.html" aria-label="Return to portfolio">&larr; Back to Portfolio</a>
-        <div class="theme-toggle-container">
-          <label for="themeSwitch">Dark/Light Mode</label>
-          <label class="switch">
-            <input type="checkbox" id="themeSwitch" />
-            <span class="slider"></span>
-          </label>
-        </div>
-      </nav>
-    </div>
-  </header>
 
-  <main role="main">
-    <div class="container">
-      <h1>Pixelated Scorecade</h1>
-      <p>
-        <strong>Role:</strong> UX Designer + Researcher<br>
-        <strong>Tools:</strong> Figma, Google Forms, React<br>
-        <strong>Timeline:</strong> 4 weeks (2024)<br>
-        <strong>Context:</strong> Created for a UX Design Certification project prompt
-      </p>
+<header>
+  <h1>QueerSafeSpace</h1>
+  <p>Community-Sourced Safety App for LGBTQ+ People</p>
+</header>
 
-      <h2>🔍 Overview</h2>
-      <p>
-        Pixelated Scorecade is a retro-style mobile app that brings back the joy of tracking arcade high scores—
-        with a modern UX twist. It was created as part of a UX Design Certificate program, following a complete 
-        UX process from research through to prototyping.
-      </p>
+<div class="toggle-theme">
+  <button onclick="toggleTheme()">Toggle Light/Dark Mode</button>
+</div>
 
-      <h2>🎯 Problem</h2>
-      <p>
-        Most arcades wipe scores when machines are powered down. Players have no easy way to track or compare 
-        their progress over time or across venues.
-      </p>
+<main>
+  <section>
+    <h2>Overview</h2>
+    <p><strong>QueerSafeSpace</strong> is a community-powered map that allows LGBTQ+ users to identify, rate, and share safe or unsafe locations based on lived experience. The app's goal is to empower marginalized communities through collective insight and visibility.</p>
+  </section>
 
-      <h2>🧪 Research</h2>
-      <p>We interviewed 12 arcade goers. Insights included:</p>
-      <ul>
-        <li>Desire for digital high score tracking.</li>
-        <li>Love of nostalgic design themes.</li>
-        <li>Preference for simple UI.</li>
-      </ul>
+  <section>
+    <h2>Project Context</h2>
+    <p>This case study was completed as part of my UX Design Certificate coursework. The app concept is original and reflects both my technical skills and my values as a queer designer seeking to serve underrepresented communities.</p>
+  </section>
 
-      <h2>🧠 Key Features</h2>
-      <ul>
-        <li>Manual or QR score input</li>
-        <li>Location-based leaderboards</li>
-        <li>8-bit visual theme</li>
-      </ul>
+  <section>
+    <h2>My Role</h2>
+    <p>I led end-to-end UX design including competitive analysis, user research, persona creation, journey mapping, wireframing, prototyping, and usability testing. I also created a live prototype in Figma.</p>
+  </section>
 
-      <figure>
-        <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" 
-             alt="Screenshot of the Pixelated Scorecade app showing the high score entry screen">
-        <figcaption>Screenshot of Score Detection Screen from Figma.</figcaption>
-      </figure>
+  <section>
+    <h2>Screenshot</h2>
+    <figure>
+      <img src="https://github.com/Aram814/Assets/blob/main/QSS_Screenshot.png?raw=true" alt="Screenshot of QueerSafeSpace app showing the interactive map interface" />
+      <figcaption>Screenshot of Score Detection Screen from Figma</figcaption>
+    </figure>
+  </section>
 
-      <h2>📱 Prototype</h2>
-      <p>
-        The clickable prototype was built in Figma and showcases the onboarding, score entry, and leaderboard browsing.
-      </p>
-      <a class="button-link" 
-         href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=12-3&t=0kz6QACbv2F8ZajU-1&starting-point-node-id=12%3A3" 
-         target="_blank" rel="noopener noreferrer">View Live Prototype</a>
+  <section>
+    <h2>Key Features</h2>
+    <ul>
+      <li>Interactive community-sourced map</li>
+      <li>Safety-level tagging system (Friendly / Mixed / Unsafe / Unknown)</li>
+      <li>Anonymous, descriptive submissions</li>
+      <li>Crisis Mode for urgent help</li>
+    </ul>
+  </section>
 
-      <h2>💡 Lessons Learned</h2>
-      <p>Retro aesthetics are great—but accessibility and clarity are essential.</p>
+  <section>
+    <h2>View Prototype</h2>
+    <a class="button" href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=255-281&t=a5tP8jUEWEp5Sf7U-1" target="_blank" rel="noopener">
+      Launch Figma Prototype
+    </a>
+  </section>
 
-      <h2>📦 Next Steps</h2>
-      <ul>
-        <li>Build backend (Supabase or Firebase)</li>
-        <li>Add sharing and social features</li>
-        <li>Test in real arcades</li>
-      </ul>
+  <section>
+    <h2>Back to Portfolio</h2>
+    <a class="button" href="https://aram814.github.io/Portfolio/index.html">
+      Return to Portfolio
+    </a>
+  </section>
+</main>
 
-      <hr>
+<footer>
+  &copy; 2025 Amanda Ramirez. All rights reserved.
+</footer>
 
-      <footer>
-        <a class="button-link" href="https://aram814.github.io/Portfolio/index.html">&larr; Back to Portfolio</a>
-      </footer>
-    </div>
-  </main>
+<script>
+  function toggleTheme() {
+    const currentTheme = document.documentElement.getAttribute("data-theme");
+    document.documentElement.setAttribute(
+      "data-theme",
+      currentTheme === "dark" ? "light" : "dark"
+    );
+  }
+</script>
 
-  <script>
-    const toggle = document.getElementById('themeSwitch');
-    const root = document.documentElement;
-
-    // Load saved preference
-    if (localStorage.getItem('theme') === 'light') {
-      root.setAttribute('data-theme', 'light');
-      toggle.checked = true;
-    }
-
-    toggle.addEventListener('change', () => {
-      if (toggle.checked) {
-        root.setAttribute('data-theme', 'light');
-        localStorage.setItem('theme', 'light');
-      } else {
-        root.setAttribute('data-theme', 'dark');
-        localStorage.setItem('theme', 'dark');
-      }
-    });
-  </script>
 </body>
 </html>
