--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pixelated Scorecade – Case Study</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg-color: #0d0d0d;
@@ -12,6 +12,14 @@
       --link-color: #66d9ef;
       --border-color: #66d9ef;
       --focus-outline: 3px dashed #ffd866;
+    }
+
+    [data-theme="light"] {
+      --bg-color: #f9f9f9;
+      --text-color: #222222;
+      --link-color: #007acc;
+      --border-color: #007acc;
+      --focus-outline: 3px dashed #cc33cc;
     }
 
     body {
@@ -22,6 +30,7 @@
       font-family: 'VT323', monospace;
       font-size: 1.25rem;
       line-height: 1.75;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     a {
@@ -29,7 +38,7 @@
       text-decoration: underline;
     }
 
-    a:focus, button:focus {
+    a:focus, button:focus, input:focus {
       outline: var(--focus-outline);
       outline-offset: 4px;
     }
@@ -38,14 +47,6 @@
       border-bottom: 1px dashed var(--border-color);
       padding-bottom: 0.3rem;
       margin-top: 2rem;
-    }
-
-    nav, main, footer {
-      display: block;
-    }
-
-    nav a {
-      margin-right: 1rem;
     }
 
     .container {
@@ -96,13 +97,78 @@
     hr {
       border-color: var(--border-color);
     }
+
+    .theme-toggle-container {
+      float: right;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 48px;
+      height: 24px;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: #ccc;
+      transition: 0.4s;
+      border-radius: 24px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: 0.4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:checked + .slider:before {
+      transform: translateX(24px);
+    }
+
+    @media (max-width: 600px) {
+      .theme-toggle-container {
+        float: none;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header role="banner">
     <div class="container">
       <nav role="navigation" aria-label="Main navigation">
-        <a href="index.html" aria-label="Return to main portfolio page">&larr; Back to Portfolio</a>
+        <a href="https://aram814.github.io/Portfolio/index.html" aria-label="Return to portfolio">&larr; Back to Portfolio</a>
+        <div class="theme-toggle-container">
+          <label for="themeSwitch">Dark/Light Mode</label>
+          <label class="switch">
+            <input type="checkbox" id="themeSwitch" />
+            <span class="slider"></span>
+          </label>
+        </div>
       </nav>
     </div>
   </header>
@@ -117,88 +183,85 @@
         <strong>Context:</strong> Created for a UX Design Certification project prompt
       </p>
 
-      <section aria-labelledby="overview">
-        <h2 id="overview">🔍 Overview</h2>
-        <p>
-          Pixelated Scorecade is a retro-style mobile app that brings back the joy of tracking arcade high scores—
-          with a modern UX twist. It was created as part of a UX Design Certificate program, following a complete 
-          UX process from research through to prototyping. Designed for arcade enthusiasts, it enables players to 
-          save and share their scores across multiple machines and venues.
-        </p>
-      </section>
+      <h2>🔍 Overview</h2>
+      <p>
+        Pixelated Scorecade is a retro-style mobile app that brings back the joy of tracking arcade high scores—
+        with a modern UX twist. It was created as part of a UX Design Certificate program, following a complete 
+        UX process from research through to prototyping.
+      </p>
 
-      <section aria-labelledby="problem">
-        <h2 id="problem">🎯 Problem</h2>
-        <p>
-          Most arcades wipe scores when machines are powered down. Players have no easy way to track or compare 
-          their progress over time or across venues.
-        </p>
-      </section>
+      <h2>🎯 Problem</h2>
+      <p>
+        Most arcades wipe scores when machines are powered down. Players have no easy way to track or compare 
+        their progress over time or across venues.
+      </p>
 
-      <section aria-labelledby="research">
-        <h2 id="research">🧪 Research</h2>
-        <p>
-          Conducted user interviews and surveys with 12 arcade goers. Key insights included:
-        </p>
-        <ul>
-          <li>Desire for digital high score tracking.</li>
-          <li>Preference for simple UI over complex social features.</li>
-          <li>Love of 8-bit, nostalgic design language.</li>
-        </ul>
-      </section>
+      <h2>🧪 Research</h2>
+      <p>We interviewed 12 arcade goers. Insights included:</p>
+      <ul>
+        <li>Desire for digital high score tracking.</li>
+        <li>Love of nostalgic design themes.</li>
+        <li>Preference for simple UI.</li>
+      </ul>
 
-      <section aria-labelledby="features">
-        <h2 id="features">🧠 Key Features</h2>
-        <ul>
-          <li>Add scores manually or scan a QR code.</li>
-          <li>Location-specific leaderboards.</li>
-          <li>Pixel art visual theme and interface.</li>
-        </ul>
-        <figure>
-          <img 
-            src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" 
-            alt="Screenshot of the Pixelated Scorecade app showing the high score entry screen"
-          >
-          <figcaption>Screenshot of Score Detection Screen from Figma.</figcaption>
-        </figure>
-      </section>
+      <h2>🧠 Key Features</h2>
+      <ul>
+        <li>Manual or QR score input</li>
+        <li>Location-based leaderboards</li>
+        <li>8-bit visual theme</li>
+      </ul>
 
-      <section aria-labelledby="prototype">
-        <h2 id="prototype">📱 Prototype</h2>
-        <p>
-          The prototype includes onboarding, score submission, and leaderboard browsing—built and tested in Figma.
-        </p>
-        <a class="button-link" 
-           href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=12-3&t=0kz6QACbv2F8ZajU-1&starting-point-node-id=12%3A3"
-           target="_blank" 
-           rel="noopener noreferrer"
-        >
-          View Live Prototype
-        </a>
-      </section>
+      <figure>
+        <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" 
+             alt="Screenshot of the Pixelated Scorecade app showing the high score entry screen">
+        <figcaption>Screenshot of Score Detection Screen from Figma.</figcaption>
+      </figure>
 
-      <section aria-labelledby="lessons">
-        <h2 id="lessons">💡 Lessons Learned</h2>
-        <p>
-          Balancing nostalgia with usability was key. Retro charm is fun, but clarity and accessibility always come first.
-        </p>
-      </section>
+      <h2>📱 Prototype</h2>
+      <p>
+        The clickable prototype was built in Figma and showcases the onboarding, score entry, and leaderboard browsing.
+      </p>
+      <a class="button-link" 
+         href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=12-3&t=0kz6QACbv2F8ZajU-1&starting-point-node-id=12%3A3" 
+         target="_blank" rel="noopener noreferrer">View Live Prototype</a>
 
-      <section aria-labelledby="next">
-        <h2 id="next">📦 Next Steps</h2>
-        <ul>
-          <li>Implement backend with Supabase or Firebase.</li>
-          <li>Add social sharing and friend challenges.</li>
-          <li>Test live in arcade settings with real users.</li>
-        </ul>
-      </section>
+      <h2>💡 Lessons Learned</h2>
+      <p>Retro aesthetics are great—but accessibility and clarity are essential.</p>
 
-      <hr aria-hidden="true">
+      <h2>📦 Next Steps</h2>
+      <ul>
+        <li>Build backend (Supabase or Firebase)</li>
+        <li>Add sharing and social features</li>
+        <li>Test in real arcades</li>
+      </ul>
 
-      <footer role="contentinfo">
-        <a class="button-link" href="index.html" aria-label="Back to main portfolio page">&larr; Back to Portfolio</a>
+      <hr>
+
+      <footer>
+        <a class="button-link" href="https://aram814.github.io/Portfolio/index.html">&larr; Back to Portfolio</a>
       </footer>
     </div>
   </main>
+
+  <script>
+    const toggle = document.getElementById('themeSwitch');
+    const root = document.documentElement;
+
+    // Load saved preference
+    if (localStorage.getItem('theme') === 'light') {
+      root.setAttribute('data-theme', 'light');
+      toggle.checked = true;
+    }
+
+    toggle.addEventListener('change', () => {
+      if (toggle.checked) {
+        root.setAttribute('data-theme', 'light');
+        localStorage.setItem('theme', 'light');
+      } else {
+        root.setAttribute('data-theme', 'dark');
+        localStorage.setItem('theme', 'dark');
+      }
+    });
+  </script>
 </body>
 </html>
