--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <strong>Key Outcomes:</strong> This project significantly enhanced my understanding of inclusive design principles, the importance of trust in community platforms, and the complexities of creating a truly safe and engaging digital environment.
             </p>
             <a href="CaseStudy2.html" class="inline-block mt-6 bg-retro-blue text-dark-black font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-retro-blue hover:border-retro-yellow">
-                View Full Case Study (Coming Soon)
+                View Full Case Study
             </a>
         </div>
     </div>
