--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -141,6 +141,13 @@
     </figure>
   </section>
 
+    <section>
+  <h2>View Prototype</h2>
+  <a class="button" href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=255-281&t=a5tP8jUEWEp5Sf7U-1" target="_blank" rel="noopener">
+    Launch Figma Prototype
+  </a>
+</section>
+
   <section>
     <h2>Key Features</h2>
     <ul>
@@ -151,12 +158,12 @@
     </ul>
   </section>
 
-  <section>
-    <h2>View Prototype</h2>
-    <a class="button" href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=255-281&t=a5tP8jUEWEp5Sf7U-1" target="_blank" rel="noopener">
-      Launch Figma Prototype
-    </a>
-  </section>
+<section>
+  <h2>Try It Yourself</h2>
+  <a class="button" href="https://queersafespace.org" target="_blank" rel="noopener">
+    Join the Waitlist
+  </a>
+</section>
 
   <section>
     <h2>Back to Portfolio</h2>
