--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project Card 1: Arcade High Score Tracking App -->
                 <div class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project1')">
-                    <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/scorecade.png" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
+                    <img src="scorecade.png" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Arcade High Score Tracking App</h3>
                         <p class="text-[var(--text-primary)] text-sm mb-4">UX Research, Credibility, Real-time Verification</p>
@@ -408,7 +408,7 @@
 
                 <!-- Project Card 3: Death Doula Webpage -->
                 <div class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project3')">
-                    <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/Snedmeonmyway.png" alt="Death Doula Webpage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
+                    <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Death Doula Webpage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Death Doula Webpage</h3>
                         <p class="text-[var(--text-primary)] text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
