--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project Card 1: Arcade High Score Tracking App -->
                 <div class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project1')">
-                    <img src="scorecade.png" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
+                    <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/scorecade.png" alt="Arcade High Score Tracking App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Arcade High Score Tracking App</h3>
                         <p class="text-[var(--text-primary)] text-sm mb-4">UX Research, Credibility, Real-time Verification</p>
@@ -454,7 +454,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project1')">&times;</span>
             <h3 class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Arcade High Score Tracking App</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/scorecade.png" alt="Arcade High Score Tracking App Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
+            <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" alt="Arcade High Score Tracking App Detail" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
                 This project was instrumental in deepening my understanding of creating dynamic, user-friendly applications, and the challenges involved in ensuring a seamless and engaging user journey within a complex system.
             </p>
