--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
             <p class="text-[var(--text-primary)]">
                 <strong>Key Outcomes:</strong> This project significantly enhanced my understanding of inclusive design principles, the importance of trust in community platforms, and the complexities of creating a truly safe and engaging digital environment.
             </p>
-            <a href="#" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
-                View Full Case Study (Coming Soon)
+            <a href="CaseStudy2.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
+                View Full Case Study
             </a>
         </div>
     </div>
@@ -507,8 +507,8 @@
             <p class="text-[var(--text-primary)]">
                 <strong>Key Outcomes:</strong> [Add specific outcomes like increased client bookings, improved online presence, etc.]
             </p>
-            <a href="#" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
-                View Full Case Study (Coming Soon)
+            <a href="CaseStudy3.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
+                View Full Case Study
             </a>
         </div>
     </div>
