--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 <strong>Methodologies:</strong> Information Architecture, Content Strategy, Booking System Integration, Testimonial Display, Responsive Web Design, Blog Integration.
             </p>
             <p class="text-[var(--text-primary)]">
-                <strong>Key Outcomes:</strong> [Add specific outcomes like increased client bookings, improved online presence, etc.]
+                <strong>Key Outcomes:</strong> TBA
             </p>
             <a href="CaseStudy3.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
                 View Full Case Study
